edit the description in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "natours",
   "version": "1.0.0",
-  "description": "**Natours** is a modern, responsive landing page for a fictional nature tour company, built using advanced CSS techniques. It features smooth animations, a background video, interactive cards, a dynamic form, and a fixed navigation bar, all designed to teach cutting-edge CSS - SASS.",
+  "description": "Natours is a modern, responsive landing page for a fictional nature tour company, built using advanced CSS techniques. It features smooth animations, a background video, interactive cards, a dynamic form, and a fixed navigation bar, all designed to teach cutting-edge CSS - SASS.",
   "homepage": "https://github.com/Mohamed-Y0/Natours#readme",
   "bugs": {
     "url": "https://github.com/Mohamed-Y0/Natours/issues"
